--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,7 +1,7 @@
 - id: check-substring
   name: Check substring in a file
   description: "Checks if a required substring exists in a specific file."
-  entry: ./check-substring.sh "tag*"
+  entry: ./check-substring.sh "tags*"
   language: script
   always_run: true
-  files: .* 
+  files: \.tfvars$|\.tf$
