--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,5 +30,5 @@ jobs:
 
       # Run yamlfmt on t.yaml
       - name: Format t.yaml using yamlfmt
-        run: ./yamlfmt t.yaml
+        run: ./yamlfmt t.yaml && cat t.yaml
 
